--- a/src/app/confirmacao/confirmacao.component.html
+++ b/src/app/confirmacao/confirmacao.component.html
@@ -173,7 +173,7 @@
   <div class="container d-flex justify-content-end">
     <div class="row">
       <div class="col-sm-12">
-        <button type="submit" class="btn btn-success btn-lg espacamento" (click)="my" data-toggle="modal" data-target="#exampleModal">Enviar</button>
+        <button type="submit" class="btn btn-success btn-lg espacamento" data-toggle="modal" data-target="#exampleModal">Enviar</button>
       </div>
     </div>
   </div>
